Fixed overflow issue while screenshotting the entire page

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ Primary - Light red (CTA text): hsl(356, 100%, 66%)
 html{
     font-size: 16px;
     scroll-behavior: smooth;
-    overflow: hidden;
     height: 100%;
 }
 body{
@@ -44,7 +43,7 @@ body{
     text-rendering: optimizeLegibility;
     margin: 0;
     line-height: 1.5;
-    overflow-y: auto;
+    overflow-y: visible;
     overflow-x: hidden;
     color: hsl(207, 13%, 34%);
 }
@@ -481,7 +480,7 @@ footer h1 {
         font-weight: bold;
    }
     .main-section{
-        margin-bottom: 19.5rem;
+        margin-bottom: 11.5rem;
         margin-top: 9rem;
         padding-top: 0;
    }
@@ -492,6 +491,10 @@ footer h1 {
         position: relative;
         display: grid;
         grid-template-columns: 57.438rem 1.5fr;
+        grid-template-rows: 918px;
+        overflow-x: hidden;
+        overflow-y: hidden;
+     
         /*grid-template-rows: 1.2fr;*/
    }
     .editor{
@@ -499,9 +502,17 @@ footer h1 {
         grid-row: 1/1;
         text-align: left;
         width: 60%;
-        margin-top: 15rem;
+        margin-top: 1rem;
         margin-left: -11rem;
    }
+   .editor > h3:nth-child(1) {
+    font-size: 1.5rem;
+   }
+   .editor > h3:nth-child(3) {
+    font-size: 1.5rem;
+   }
+   
+   
     .editor > p:first-child{
         margin-bottom: 61px;
    }
@@ -570,6 +581,9 @@ footer h1 {
         right: 0%;
         transform: translate(-13%,-50%);
    }
+   .blogr > h3, h2{
+       font-size: 1.5rem;
+   }
     .blogr p{
         margin-bottom: 3.75rem;
    }
@@ -580,6 +594,7 @@ footer h1 {
         position: absolute;
         top: 0;
         right: -15.313rem;
+        overflow-x:hidden;
    }
     #laptop{
         max-width: unset;
@@ -695,3 +710,4 @@ footer h1 {
 .icon:active{
     background-color: unset;
 }
+
